# sails-hello-world

./: Cargo.toml  LICENSE  README.md  build.rs
app/: Cargo.toml
app/src/: lib.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs
src/: lib.rs
tests/: gtest.rs
