[workspace]

members = ["client"]


[package]
name = "sails-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
sails-hello-world-app = { path = "app" }

[build-dependencies]
sails-hello-world-app = { path = "app" }
sails-rs = { version = "0.4.0", features = ["wasm-builder"] }
sails-idl-gen = "0.4.0"

[dev-dependencies]
sails-hello-world = { path = ".", features = ["wasm-binary"] }
sails-hello-world-client = { path = "client" }
sails-rs = { version = "0.4.0", features = ["gtest"] }
tokio = { version = "1.39", features = ["rt", "macros"] }

[features]
wasm-binary = []
